@startuml
title CSE210-Develop04 C# Mindfulness Program

'--------------------------------------------------
' Base class for common activity behavior
'--------------------------------------------------
abstract class Activity {
  - _name
  - _description
  - _duration
  --
  + DisplayStartMessage(_description)
  + DisplayEndMessage(_name)
  + Pause()
  + Quit()
}

'--------------------------------------------------
' Breathing Activity: alternates between "Breathe in" and "Breathe out"
'--------------------------------------------------
class BreathingActivity {
  - _interval
  + BreathingCycle()
}
BreathingActivity --|> Activity : Child of

'--------------------------------------------------
' Reflection Activity: shows a random prompt and then reflective questions
'--------------------------------------------------
class ReflectionActivity {
  - _prompts : List<string>
  - _questions : List<string>
  + ReflectionActivity()
  + RandomPrompt(_prompts)
  + RandomQuestion(_questions)
}
ReflectionActivity --|> Activity : Child of

'--------------------------------------------------
' Listing Activity: shows a prompt and lets the user list items until the time is up
'--------------------------------------------------
class ListingActivity {
  - _prompt : string
  - _items : List<string>
  + ListingActivity()
  + CountItems()
}
ListingActivity --|> Activity : Child of

'--------------------------------------------------
' Utility class for any animations (spinner, countdown, etc.)
'--------------------------------------------------
class Animation {
  - _animationType : string
  + ShowAnimation(_animationType)
  + ShowSpinner(duration: int)
  + ShowCountdown(seconds: int)
}

'--------------------------------------------------
' Main program: contains the menu system and drives the activity selection
'--------------------------------------------------
class Program {
  - _activities : List<Activity>
  + Main()
  + DisplayMenu()
  + RunActivity(selectedActivity: Activity)
}

' Relationships depicting that Program uses the Activity base class ...
Program ..> Activity : Selects one

' And Activity uses Animation for pauses and animations.
Activity ..> Animation : Displays

@enduml